--- a/pomodoro-app/src/App.css
+++ b/pomodoro-app/src/App.css
@@ -7,17 +7,18 @@ html {
   color: #1f1f7a;
   font-family: arial;
   font-weight: 100;
-  background: #ffccff;
+  background: none;
 }
 h1 {
   margin: 32px 0 40px;
   /*color:white;*/
+  margin-top: 2rem;
   font-size: 2em;
   font-family: arial;
   font-style: italic;
 }
 button {
-  background: white;
+  background: grey;
   border: #1f1f7a;
   border-radius: 15px;
   outline: none;
@@ -27,7 +28,7 @@ button {
   font-style: oblique;
 }
 .App {
-  margin-top: 24px;
+  margin-top: 10px;
   display: flex;
   flex-direction: column;
   align-items: center;
